@@ -9,6 +9,7 @@ version <next>:
 - Supoort AMD AMF encoder on Linux (via Vulkan)
 - IMM5 video decoder
 - ZeroMQ protocol
+- support Sipro ACELP.KELVIN decoding
 
 
 version 4.2:
